<resources>
    <string name="app_name">Test Task 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="authorization">Авторизация</string>
    <string name="list_payments">Список платежей</string>
    <string name="payment">Покупка</string>
    <string name="card">MASTERCARD</string>
    <string name="amout">$99.9</string>
    <string name="data">12/12/23</string>
    <string name="id">id</string>
    <string name="exit">Выход</string>
    <string name="required_for_entry">Обязательно для ввода!</string>
    <string name="background">Background</string>
</resources>